# fraud-detection-model

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_features.ipynb  03_modeling.ipynb
scripts/: train_model.py
src/data/: loader.py
src/features/: engineer.py
src/models/: predict.py  train.py
tests/fixtures/: sample_data.py
tests/unit/: test_engineer.py  test_loader.py  test_train.py
